# query-agent-benchmarking

./: .gitignore  README.md  beir-arguana-hybrid-search-1-results.json  beir-arguana-query-agent-search-only-1-results.json  beir-fiqa-test-hybrid-search-1-results.json  beir-fiqa-test-query-agent-search-only-1-results.json  beir-fiqa-test-query-agent-search-only-3-results.json  beir-nq-hybrid-search-1-results.json  beir-scifact-test-hybrid-search-1-results.json  beir-scifact-test-query-agent-search-only-1-results.json  beir-scifact-test-query-agent-search-only-3-results.json  bright-biology-hybrid-search-1-results.json  enron-hybrid-search-100-results.json  enron-hybrid-search-50-5-results.json  enron-query-agent-search-only-100-results.json  enron-query-agent-search-only-50-5-results.json  hello-world.py  hello.py  lotte-lifestyle-test-forum-hybrid-search-1-results.json  lotte-lifestyle-test-forum-query-agent-search-only-1-results.json  lotte-lifestyle-test-forum-query-agent-search-only-3-results.json  lotte-lifestyle-test-search-hybrid-search-1-results.json  lotte-lifestyle-test-search-query-agent-search-only-1-results.json  lotte-lifestyle-test-search-query-agent-search-only-3-results.json  lotte-recreation-test-forum-hybrid-search-1-results.json  lotte-recreation-test-forum-query-agent-search-only-1-results.json  lotte-recreation-test-forum-query-agent-search-only-3-results.json  lotte-recreation-test-search-hybrid-search-1-results.json  lotte-recreation-test-search-query-agent-search-only-1-results.json  lotte-recreation-test-search-query-agent-search-only-3-results.json  pyproject.toml  setup.py  test-search-only.py  wixqa-hybrid-search-1-results.json  wixqa-hybrid-search-50-5-results.json  wixqa-query-agent-search-only-3-results.json  wixqa-query-agent-search-only-50-5-results.json
benchmarker/: README.md  agent.py  benchmark-config.yml  benchmark-run.py  config.py  config.yml  database.py  dataset.py  models.py  populate-db.py  pyproject.toml  query_agent_benchmark.py  utils.py
benchmarker/cmd/: agent.py  benchmark-run.py  benchmark_run.py  config.yml  database.py  dataset.py  query_agent_benchmark.py  run_agent.py  utils.py
benchmarker/metrics/: ir_metrics.py
benchmarker/scripts/: load_database.py  load_dataset.py  run_weaviate_query_agent.py
benchmarker/src/: agent.py  benchmark-run.py  config.yml  database.py  dataset.py  dspy_rag.py  populate-db.py  (+6 more)
(+174 files in other folders)
