[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "query-agent-benchmarking"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "dspy>=2.6.27",
  "sentence-transformers>=5.0.0",
  "weaviate-client[agents]>=4.15.4",
  "weaviate-agents>=1.0.0",
  "pandas>=2.3.1",
  "datasets>=4.0.0",
  "ir-datasets>=0.5.11",
  "pip>=25.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmarker*"]
exclude = ["notebooks*", "results*", "locust*", "ci*"]
